[FEATURE] Players gain XP by completing projects